--- a/styles.css
+++ b/styles.css
@@ -28,28 +28,25 @@ body {
     overflow-x: hidden;
 }
 
-/* Loading screen styles */
-#loading-screen {
+/* Loading Spinner Style */
+.loading-screen {
   position: fixed;
   top: 0;
   left: 0;
-  width: 10%;
+  width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.8); /* Optional background overlay */
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  z-index: 1000;
 }
 
-/* Spinner styles */
-.spinner {
-  width: 50px;
-  height: 50px;
-  border: 5px solid #d3d3d3;
-  border-top: 5px solid #333;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
+/* Optional: Adjust size of the logo gif */
+.loading-spinner img {
+  max-width: 150px; /* Set your logo size */
+  width: auto;
+  height: auto;
 }
 
 /* Spinner animation */
