--- a/styles.css
+++ b/styles.css
@@ -1022,7 +1022,7 @@ p {
     display: flex;
     flex-direction: column; /* Stack items on small screens */
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 2200px;
     width: 100%;
     padding: 20px;
 }
@@ -1260,6 +1260,92 @@ p {
 }
 
 
+}
+/* General Image Container */
+.mesh-image-container {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+    height: 300px; /* Fixed height for consistency */
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-bottom: 50px;
+    align-items: flex-end;
+}
+
+/* Image styling */
+.mesh-image, 
+#zoomed-image, 
+.mesh-gif {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin-top: 80px;
+}
+
+/* Hide images initially */
+.mesh-hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+/* Visible images */
+.mesh-visible {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 1s ease;
+}
+
+/* Specific styles for the zoomed image */
+#zoomed-image {
+    z-index: 4; /* Ensure it is above the GIF */
+}
+
+/* Specific styles for the GIF */
+.mesh-gif {
+    z-index: 3; /* Below the zoomed image */
+    opacity: 100;
+    visibility: visible;
+}
+
+/* Ensure consistent sizing and positioning for the GIF across screen sizes */
+@media (max-width: 768px) {
+    /* General Image Container */
+.mesh-image-container {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+    height: 300px; /* Fixed height for consistency */
+    margin: 0 auto;
+  margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+    .mesh-gif {
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        position: absolute; /* Ensure it stays in the same place as images */
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Maintains the aspect ratio */
+    }
+}
+
+@media (min-width: 1200px) {
+    .mesh-image-container {
+        width: 100%;
+        max-width: 500px; /* Larger max width for bigger screens */
+        height: 500px; /* Larger height for larger screens */
+    }
 }
 
 
